force-app/main/default/objects/Customer_Onramp__c/Customer_Onramp__c.object-meta.xml
<CustomObject>
    <label>Customer Onramp</label>
    <nameField>
        <label>Customer Onramp Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Customer Onramps</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>