force-app/main/default/objects/Customer_Onramp__c/fields/Circle_Mint__c.field-meta.xml
<CustomField>
    <fullName>Circle_Mint__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Circle Mint</label>
    <referenceTo>Circle_Account__c</referenceTo>
    <relationshipLabel>Customer Onramps</relationshipLabel>
    <relationshipName>Customer_Onramps</relationshipName>
    <type>Lookup</type>
</CustomField>