force-app/main/default/objects/Customer_Onramp__c/fields/Circle_Mint_Application_Status__c.field-meta.xml
<CustomField>
    <fullName>Circle_Mint_Application_Status__c</fullName>
    <formula>TExt(Circle_Mint__r.Circle_Account_Application_Status__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Circle Mint Application Status</label>
    <type>Text</type>
</CustomField>