force-app/main/default/objects/Customer_Onramp__c/fields/Compliance_Analyst__c.field-meta.xml
<CustomField>
    <fullName>Compliance_Analyst__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Used to populate the Compliance Analyst from the Circle Mint application</description>
    <inlineHelpText>Populate the Compliance Analyst from the Circle Mint application</inlineHelpText>
    <label>Compliance Analyst</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Customer_Onramps</relationshipName>
    <type>Lookup</type>
</CustomField>