force-app/main/default/objects/Customer_Onramp__c/fields/Days_Open__c.field-meta.xml
<CustomField>
    <fullName>Days_Open__c</fullName>
    <formula>Today() - Circle_Mint__r.Application_Submitted_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Days Open</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>