force-app/main/default/objects/Customer_Onramp__c/fields/Days_Since_Application_Status_Change__c.field-meta.xml
<CustomField>
    <fullName>Days_Since_Application_Status_Change__c</fullName>
    <formula>Today() - Circle_Mint__r.Application_Status_Changed_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Days Since Application Status Change</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>