force-app/main/default/objects/Customer_Onramp__c/fields/Requestor__c.field-meta.xml
<CustomField>
    <fullName>Requestor__c</fullName>
    <formula>CreatedBy.FirstName + &apos; &apos; + CreatedBy.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Requestor</label>
    <type>Text</type>
</CustomField>